objects/Community_Category__c.object
<CustomObject>
    <fields>
        <fullName>Community_ID__c</fullName>
        <label>Community ID</label>
        <referenceTo>Community__c</referenceTo>
        <relationshipLabel>Community categories</relationshipLabel>
        <relationshipName>Community_categories</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Display_Sequence_Nbr__c</fullName>
        <label>Display Sequence Nbr</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IsActive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsActive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Community Category</label>
    <nameField>
        <displayFormat>CC-{00000000}</displayFormat>
        <label>Community Category ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Community categories</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>